--- a/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.plain.twig
@@ -1,6 +1,6 @@
 Dear {{ customerTitle }} {{ customerLastNames }},
 
-Please be advised that the next instalment for your course is due on {{ at|date('d F Y') }} as per your payment plan. The amount of £{{ (amount / 100)|number_format(2, '.', ',') }} will be taken automatically from the card used to pay your most recent instalment.
+Please be advised that the next instalment for your course is due on {{ at|date('d F Y') }} as per your payment plan. The amount of £{{ amount }} will be taken automatically from the card used to pay your most recent instalment.
 
 To ensure that your payment is successful, please check that your account is credited with the necessary funds and that your bank is informed of this transaction. If you need to change your payment method, please call the Admissions Team on the number below.
 
