Fix body formatting

--- a/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.html.twig
@@ -41,7 +41,7 @@
 </p>
 
 <p>
-    Kind regards,
+    Kind regards,<br>
     <strong>
         The Admissions Team<br>
         University of Cambridge<br>
