Update email template

--- a/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.html.twig
@@ -33,7 +33,7 @@
 </p>
 
 <p>
-    To ensure that your payment is successful, please check that your account is credited with the necessary funds and that your bank is informed of this transaction. If you need to change your payment method, please call the Admissions Team on the number below.
+    To ensure that your payment is successful, please check that your account is credited with the necessary funds and that your bank is informed of this transaction. If you need to change your card details or payment method, please call the Admissions Team on the number below.  Please do not send card details by email as this is not secure.
 </p>
 
 <p>
