--- a/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/TimelyPaymentNotification/body.plain.twig
@@ -2,7 +2,7 @@ Dear {{ customerTitle }} {{ customerLastNames }},
 
 Please be advised that the next instalment for your course is due on {{ at|date('d F Y') }} as per your payment plan. The amount of £{{ amount }} will be taken automatically from the card used to pay your most recent instalment.
 
-To ensure that your payment is successful, please check that your account is credited with the necessary funds and that your bank is informed of this transaction. If you need to change your payment method, please call the Admissions Team on the number below.
+To ensure that your payment is successful, please check that your account is credited with the necessary funds and that your bank is informed of this transaction. If you need to change your card details or payment method, please call the Admissions Team on the number below.  Please do not send card details by email as this is not secure.
 
 The successful payment will appear on your credit or debit card statement with the reference 'www.cam.ac.uk 01223 766733'.
 
