--- a/src/Ice/MailerBundle/Resources/views/CourseApplication/bursary.application.irh.late.body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/CourseApplication/bursary.application.irh.late.body.html.twig
@@ -1,7 +1,7 @@
 <p>Thank you for your application for the course: {{ course.title }}. We note you would also like to be considered for the Ivy Rose Hood bursary.</p>
 <p>
 {% include "IceMailerBundle:CourseApplication:application.consideration.html.twig"
-with { 'plainText': false, 'defaultMsg': 'We will contact you as soon as possible to advise you of the outcome of your course application, however applications for the Ivy Rose Hood bursary will not be considered until Friday 24 <sup>th</sup> July 2015. We will notify you of the outcome of your application for this award after that date. If you book your place BEFORE the bursary decision and are awarded the bursary, then the bursary amount will either be reimbursed (if you have paid in full) or applied to the final instalment of your payment plan.' } %}
+with { 'plainText': false, 'defaultMsg': 'We will contact you as soon as possible to advise you of the outcome of your course application, however applications for the Ivy Rose Hood bursary will not be considered until Friday 24th July 2015. We will notify you of the outcome of your application for this award after that date. If you book your place BEFORE the bursary decision and are awarded the bursary, then the bursary amount will either be reimbursed (if you have paid in full) or applied to the final instalment of your payment plan.' } %}
 </p>
 <p>Please note that this not a distance learning course and that regular attendance at classes in Cambridge throughout the academic year is required.</p>
 
