--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
@@ -47,18 +47,19 @@
     <h2>Studying at the Institute of Continuing Education (ICE)</h2>
     <p>
         Please see <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students">our website</a> for information
-        regarding studying at ICE, including the Student Handbook which details important policies relating to your study.
+        regarding studying at ICE, including the Student Handbook which details important policies relating to your year of study.
     </p>
 
 {% endif %}
 {% if showSectionOnlineNextSteps %}
     <h2>Next Steps</h2>
-    <p>
-        Access to your online course area will open on {{ course.startDate | date('F jS Y') }}. You will be sent instructions to this email
-        address on how to access your online course (including your username and password) shortly before this date
-        (normally the Friday before the course begins). If you have not received these instructions <strong>BY</strong>
-        {{ course.startDate | date('F jS Y') }} please contact the <a href="http://support.iceonline.cam.ac.uk">eLearning Helpdesk</a>.
-    </p>
+    <ul>
+        <li><p>Send us a photo of yourself for your University Card. <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students">More information</a></p></li>
+        <li><p>Familiarise yourself with your Course Specification found under Downloads on the <a href="{{ course.webUrl }}">web page for your course</a></p></li>
+        <li><p>Ensure you are in a safe and legal position to study in the UK, prior to the start of your course. <a href="http://www.ice.cam.ac.uk/studying-with-us/international-students">More information</a></p></li>
+        <li><p>Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students">More information</a></p></li>
+        <li><p>Finally, you will be sent access to your virtual learning environment (VLE) a few weeks before your course start date. <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students/studying-on-award-bearing-courses/virtual-learning-environment">More information</a></p></li>
+    </ul>
 
 {% endif %}
 {% if courseMaterialsDelivery is defined %}
@@ -81,7 +82,9 @@
 
 <h2>Contacting us</h2>
 <p>
-    If you would like to contact us regarding this booking, please contact {% if contact == 'online' %}<a href="mailto:onlinecourses@ice.cam.ac.uk">onlinecourses@ice.cam.ac.uk</a> or +44 (0)1223 760852{% else %}our Admissions Team on <a href="mailto:ice.admissions@ice.cam.ac.uk">ice.admissions@ice.cam.ac.uk</a> or +44 (0)1223 746262{% endif %}.
+    If you would like to contact us regarding your course, please contact the Academic Programme Manager: <a href="mailto:ug-awards@ice.cam.ac.uk">ug-awards@ice.cam.ac.uk</a>.
+    <br>
+    For enquiries regarding this booking, please contact our Admissions Team on <a href="mailto:ice.admissions@ice.cam.ac.uk">ice.admissions@ice.cam.ac.uk</a> or +44 (0)1223 746262.
 </p>
 
 <div class="smallprint">
