--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
@@ -19,9 +19,11 @@ Course dates:  {{ course.startDate | date('j M Y')}} - {{ course.endDate | date(
 {% endif %}
 {% if showSectionOnlineNextSteps %}
     Next Steps
-    Access to your online course area will open on {{ course.startDate | date('F jS Y') }}. You will be sent instructions to this email address on how to access your online course (including your username and password) shortly before this date (normally the Friday before the course begins). If you have not received these instructions BY {{ course.startDate | date('F jS Y') }} please contact the eLearning Helpdesk at:
-
-    http://support.iceonline.cam.ac.uk
+    * Send us a photo of yourself for your University Card. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students
+    * Familiarise yourself with your Course Specification found under Downloads on the web page for your course: {{  course.webUrl }}
+    * Ensure you are in a safe and legal position to study in the UK, prior to the start of your course. More information: http://www.ice.cam.ac.uk/studying-with-us/international-students
+    * Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students
+    * Finally, you will be sent access to your virtual learning environment (VLE) a few weeks before your course start date. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students/studying-on-award-bearing-courses/virtual-learning-environment
 
 {% endif %}
 {% if courseMaterialsDelivery is defined %}
@@ -36,7 +38,9 @@ Course dates:  {{ course.startDate | date('j M Y')}} - {{ course.endDate | date(
 
 {% endif %}
 Contacting us
-If you would like to contact us regarding this booking, please contact {% if contact == 'online' %}onlinecourses@ice.cam.ac.uk or +44 (0)1223 760852{% else %}our Admissions Team on ice.admissions@ice.cam.ac.uk or +44 (0)1223 746262{% endif %}.
+If you would like to contact us regarding your course, please contact the Academic Programme Manager: ug-awards@ice.cam.ac.uk
+
+For enquiries regarding this booking, please contact our Admissions Team on ice.admissions@ice.cam.ac.uk or +44 (0)1223 746262.
 
 
 
