Remove unused part of email

--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
@@ -57,7 +57,7 @@
         <li><p>Send us a photo of yourself for your University Card. <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students">More information</a></p></li>
         <li><p>Familiarise yourself with your Course Specification found under Downloads on the <a href="{{ course.webUrl }}">web page for your course</a></p></li>
         <li><p>Ensure you are in a safe and legal position to study in the UK, prior to the start of your course. <a href="http://www.ice.cam.ac.uk/studying-with-us/international-students">More information</a></p></li>
-        <li><p>Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students">More information</a></p></li>
+        <li><p>Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. <a href="http://www.ice.cam.ac.uk/welcome-afternoon">More information</a></p></li>
         <li><p>Finally, you will be sent access to your virtual learning environment (VLE) a few weeks before your course start date. <a href="http://www.ice.cam.ac.uk/studying-with-us/information-for-students/studying-on-award-bearing-courses/virtual-learning-environment">More information</a></p></li>
     </ul>
 
@@ -73,9 +73,6 @@
     {% else %}
         <p>
             Course materials for this course will be e-mailed to you when available. Please contact us if you have not received these two weeks before the course start date.
-        </p>
-        <p>
-            If you are taking an undergraduate qualification, your course specification (handbook) can be found under Downloads on the <a href="{{ course.webUrl }}">web page for your course</a>. The course specification gives detailed information about course-content, assignments, teaching dates and reading lists as well as resources available to you.
         </p>
     {% endif %}
 {% endif %}
