--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
@@ -22,7 +22,7 @@ Next Steps
 * Send us a photo of yourself for your University Card. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students
 * Familiarise yourself with your Course Specification found under Downloads on the web page for your course: {{  course.webUrl }}
 * Ensure you are in a safe and legal position to study in the UK, prior to the start of your course. More information: http://www.ice.cam.ac.uk/studying-with-us/international-students
-* Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students
+* Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. More information: http://www.ice.cam.ac.uk/welcome-afternoon
 * Finally, you will be sent access to your virtual learning environment (VLE) a few weeks before your course start date. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students/studying-on-award-bearing-courses/virtual-learning-environment
 
 {% endif %}
@@ -32,8 +32,6 @@ Course materials
 Course materials will be posted on your online course space via our Virtual Learning Environment (VLE), and will be made available to you from the course start date. Please note that there is no requirement to complete any reading or coursework in advance of the start date.
 {% else %}
 Course materials for this course will be e-mailed to you when available. Please contact us if you have not received these two weeks before the course start date.
-
-If you are taking an undergraduate qualification, your course specification (handbook) can be found under Downloads on the relevant course web page of the Institute's website: {{ course.webUrl }} . The course specification gives detailed information about course-content, assignments, teaching dates and reading lists as well as resources available to you.
 {% endif %}
 
 {% endif %}
