--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
@@ -22,11 +22,11 @@ Next Steps
 Access to your online course area will open on {{ course.startDate | date('F jS Y') }}. You will be sent instructions to this email address on how to access your online course (including your username and password) shortly before this date (normally the Friday before the course begins). If you have not received these instructions BY {{ course.startDate | date('F jS Y') }} please contact the eLearning Helpdesk at:
 
 http://support.iceonline.cam.ac.uk
-    
+
 {% endif %}
-{% if showSectionCertsAndDipsNextSteps %}
+{% if showSectionForCertsAndDips %}
 Next Steps
-* Send us a photo of yourself for your University Card. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students
+* Send us a photo of yourself for your University Card. More information: http://www.ice.cam.ac.uk/studying-with-us/information-for-students/studying-on-award-bearing-courses/student-benefits
 * Familiarise yourself with your Course Specification found under Downloads on the web page for your course: {{  course.webUrl }}
 * Ensure you are in a safe and legal position to study in the UK, prior to the start of your course. More information: http://www.ice.cam.ac.uk/studying-with-us/international-students
 * Add a date to your diary: The Certificates & Diplomas Welcome Afternoon. More information: http://www.ice.cam.ac.uk/welcome-afternoon
@@ -34,6 +34,8 @@ Next Steps
 
 {% endif %}
 {% if courseMaterialsDelivery is defined %}
+{% if showSectionForCertsAndDips is defined and showSectionForCertsAndDips == false %}
+{% else %}
 Course materials
 {% if courseMaterialsDelivery == 'vle' %}
 Course materials will be posted on your online course space via our Virtual Learning Environment (VLE), and will be made available to you from the course start date. Please note that there is no requirement to complete any reading or coursework in advance of the start date.
@@ -41,6 +43,7 @@ Course materials will be posted on your online course space via our Virtual Lear
 Course materials for this course will be e-mailed to you when available. Please contact us if you have not received these two weeks before the course start date.
 {% endif %}
 
+{% endif %}
 {% endif %}
 Contacting us
 If you would like to contact us regarding your course, please contact the Academic Programme Manager: ug-awards@ice.cam.ac.uk
