--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
@@ -71,8 +71,8 @@
     </ul>
 {%  endif %}
 {% if courseMaterialsDelivery is defined %}
-    {% if showSectionForCertsAndDips is defined and showSectionForCertsAndDips == false %}
-        {# Hackish way of not displaying #}
+    {% if showSectionForCertsAndDips is defined and showSectionForCertsAndDips == true %}
+        {# Hackish way of not displaying for certs and dips #}
     {% else %}
         <h2>Course materials</h2>
         {% if courseMaterialsDelivery == 'vle' %}
