--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
@@ -34,7 +34,7 @@ Next Steps
 
 {% endif %}
 {% if courseMaterialsDelivery is defined %}
-{% if showSectionForCertsAndDips is defined and showSectionForCertsAndDips == false %}
+{% if showSectionForCertsAndDips is defined and showSectionForCertsAndDips == true %} {# Hackish way of not displaying for certs and dips #}
 {% else %}
 Course materials
 {% if courseMaterialsDelivery == 'vle' %}
