--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.html.twig
@@ -96,7 +96,7 @@
         <br>
         For enquiries regarding this booking, please contact our Admissions Team on <a href="mailto:ice.admissions@ice.cam.ac.uk">ice.admissions@ice.cam.ac.uk</a> or +44 (0)1223 746262.
     </p>
-{% elseif courseMaterialsDelivery is defined %}
+{% elseif courseMaterialsDelivery is defined and courseMaterialsDelivery == 'vle' %}
     <p>
         If you would like to contact us regarding this booking, please contact onlinecourses@ice.cam.ac.uk or +44 (0)1223 760852.
     </p>
