--- a/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
+++ b/src/Ice/MailerBundle/Resources/views/BookingConfirmation/body.plain.twig
@@ -50,7 +50,7 @@ Contacting us
 If you would like to contact us regarding your course, please contact the Academic Programme Manager: ug-awards@ice.cam.ac.uk
 
 For enquiries regarding this booking, please contact our Admissions Team on ice.admissions@ice.cam.ac.uk or +44 (0)1223 746262.
-{% elseif courseMaterialsDelivery is defined %}
+{% elseif courseMaterialsDelivery is defined and courseMaterialsDelivery == 'vle' %}
 If you would like to contact us regarding this booking, please contact onlinecourses@ice.cam.ac.uk or +44 (0)1223 760852.
 {% else %}
 If you would like to contact us regarding this booking, please contact our Admissions Team on ice.admissions@ice.cam.ac.uk or +44 (0)1223 746262.
